--- a/container/public/index.html
+++ b/container/public/index.html
@@ -4,7 +4,7 @@
     <title>Container</title>
 </head>
 <body>
-<div id="dev-products"></div>
-<div id="dev-cart"></div>
+<div id="dev-products-container"></div>
+<div id="dev-cart-container"></div>
 </body>
 </html>
